--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<b>Блог</b>
+<!DOCTYPE html>
+<html lang="ua">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<link href="css/s.css" rel="stylesheet">
+	<title>Особисті записи Андрія Голотюка</title>
+	</head>
+	<body>
+
+		<section align="center" class="top">Особисті записи Андрія Голотюка</section>
+		<section align="center" class="top_menu">
+			<a href="https://holotiuk.github.io/">Огляд</a>
+			<a href="https://holotiuk.github.io/posts/">Пости</a>
+			<a href="https://holotiuk.github.io/transitions/">Переклади</a>
+			<a href="https://holotiuk.github.io/videos/">Відео</a>
+			<a href="https://holotiuk.github.io/audio-books/">Аудіо-книги</a>
+
+
+		</section>
+
+		<section class="footer" align="center">
+
+Блог започатковано 11 березня 2021 року
+
+		</section>
+
+	</body>
+</html>
