--- a/translations/index.html
+++ b/translations/index.html
@@ -19,7 +19,24 @@
 
 
 		</section>
+		<section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		</section>
 		<section class="footer" align="center">
 
 Блог започатковано 11 березня 2021 року
