--- a/translations.html
+++ b/translations.html
@@ -13,7 +13,7 @@
 		<section align="center" class="top_menu">
 			<a href="https://holotiuk.github.io/">Огляд</a>
 <a href="https://holotiuk.github.io/posts/">Пости</a> 
-			<a href="https://holotiuk.github.io/translations.html">Переклади</a>
+			<a href="https://holotiuk.github.io/translations/">Переклади</a>
 			<a href="https://holotiuk.github.io/videos/">Відео</a>
 <a href="https://holotiuk.github.io/audio-books/">Аудіо-книги</a>
 
