get some changes

--- a/posts.html
+++ b/posts.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link href="css/s.css" rel="stylesheet">
-		<title>Особисті записи Андрія Голотюка</title>
+		<title>Пости</title>
 	</head>
 	<body>
 		<section align="center" class="top">Особисті записи Андрія Голотюка</section>
