--- a/translations.html
+++ b/translations.html
@@ -5,24 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link href="css/s.css" rel="stylesheet">
-	<title>Особисті записи Андрія Голотюка</title>
+		<title>Переклади статей на Українську мову</title>
 	</head>
 	<body>
-
 		<section align="center" class="top">Особисті записи Андрія Голотюка</section>
 		<section align="center" class="top_menu">
-			<a href="https://holotiuk.github.io/">Огляд</a>
-<a href="https://holotiuk.github.io/posts/">Пости</a> 
-			<a href="https://holotiuk.github.io/translations/">Переклади</a>
-			<a href="https://holotiuk.github.io/videos/">Відео</a>
-<a href="https://holotiuk.github.io/audio-books/">Аудіо-книги</a>
 
-
+<a href='index.html' title='Блог головна сторінка'>Головна</a> <a href='posts.html' title='Пости на різні теми'>Пости</a> <a href='translations.html' title='Мої переклади статей'>Переклади</a> <a href='videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 
 		</section>
 
 		<section class="footer" align="center">
 
-Блог започатковано 11 березня 2021 року
+			Блог започатковано 11 березня 2021 року
 
 		</section>
 
