--- a/translations.html
+++ b/translations.html
@@ -14,6 +14,12 @@
 <a href='index.html' title='Блог головна сторінка'>Головна</a> <a href='posts.html' title='Пости на різні теми'>Пости</a> <a href='translations.html' title='Мої переклади статей'>Переклади</a> <a href='videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 
 		</section>
 
+<ul>
+<li>
+<a href="translitions/Moia_Systema_Zdorovia_Mykola_Amosov.html">
+Моя система здоров'я Микола Амосов</a>
+</li>
+</ul>
 		<section class="footer" align="center">
 
 			Блог започатковано 11 березня 2021 року
