--- a/translitions/Moia_Systema_Zdorovia_Mykola_Amosov.html
+++ b/translitions/Moia_Systema_Zdorovia_Mykola_Amosov.html
@@ -11,7 +11,7 @@
 		<section align="center" class="top">Особисті записи Андрія Голотюка</section>
 		<section align="center" class="top_menu">
 
-<a href='index.html' title='Блог головна сторінка'>Головна</a> <a href='posts.html' title='Пости на різні теми'>Пости</a> <a href='translations.html' title='Мої переклади статей'>Переклади</a> <a href='videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 		</section>
+<a href='https://holotiuk.github.io/index.html' title='Блог головна сторінка'>Головна</a> <a href='https://holotiuk.github.io/posts.html' title='Пости на різні теми'>Пости</a> <a href='https://holotiuk.github.io/translations.html' title='Мої переклади статей'>Переклади</a> <a href='https://holotiuk.github.io/videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 		</section>
 <p>Академік АМН Росії, дійсний член Академії наук України М. Амосов.</p>
 
 <p>Надруковано в журн. Наука і життя, № 5, 1998 г.</p>
