--- a/translations.html
+++ b/translations.html
@@ -8,7 +8,7 @@
 		<title>Переклади статей на Українську мову</title>
 	</head>
 	<body>
-		<section align="center" class="top">Особисті записи Андрія Голотюка</section>
+		<section align="center" class="top">Особисті записи | Андрій Голотюк</section>
 		<section align="center" class="top_menu">
 
 <a href='https://holotiuk.github.io/index.html' title='Блог головна сторінка'>Головна</a> <a href='https://holotiuk.github.io/posts.html' title='Пости на різні теми'>Пости</a> <a href='https://holotiuk.github.io/translations.html' title='Мої переклади статей'>Переклади</a> <a href='https://holotiuk.github.io/videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 		</section>
