Початок роботи над перекладом

--- a/translitions/Moia_Systema_Zdorovia_Mykola_Amosov.html
+++ b/translitions/Moia_Systema_Zdorovia_Mykola_Amosov.html
@@ -4,14 +4,16 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link href="https://holotiuk.github.io/css/s.css" rel="stylesheet">
+		<link href="http://localhost/static_php/site/css/s.css" rel="stylesheet">
 		<title>Відео з Youtube.com</title>
 	</head>
 	<body>
 		<section align="center" class="top">Особисті записи | Андрій Голотюк</section>
 		<section align="center" class="top_menu">
 
-<a href='https://holotiuk.github.io/index.html' title='Блог головна сторінка'>Головна</a> <a href='https://holotiuk.github.io/posts.html' title='Пости на різні теми'>Пости</a> <a href='https://holotiuk.github.io/translations.html' title='Мої переклади статей'>Переклади</a> <a href='https://holotiuk.github.io/videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 		</section>
+<a href='http://localhost/static_php/site/index.html' title='Блог головна сторінка'>Головна</a> <a href='http://localhost/static_php/site/posts.html' title='Пости на різні теми'>Пости</a> <a href='http://localhost/static_php/site/translations.html' title='Мої переклади статей'>Переклади</a> <a href='http://localhost/static_php/site/videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 		</section>
+<div class="container" align="center">
+<div class="block" align="justify">
 <p>Академік АМН Росії, дійсний член Академії наук України М. Амосов.</p>
 
 <p>Надруковано в журн. Наука і життя, № 5, 1998 г.</p>
@@ -717,6 +719,8 @@
 <p>Що стосується мене самого, то я збираюся продовжувати експеримент. Минулі роки не дозволили зробити остаточні висновки. Твердої впевненості в успіху ще немає, не виключені і пізні ускладнення. Можливо, що запропоновані мною навантаження надмірні, і можна обійтися меншими, заощадивши час. Неясно, як поведе себе програма старіння, які будуть темпи порушень різних функцій.</p>
 
 <p>Дивне становище: як вченому, мені хочеться швидше отримати результати, а як людині з однією-єдиною життям - продовжити вивчення якомога довше. Загалом, експеримент триває: є піддослідний кролик - Я, є науковий співробітник - Я, є лабораторії в інститутах. Матеріалу вистачить до кінця днів. Тільки б вистачило мотивів.</p>
+</div>
+</div>
 		<section class="footer" align="center">
 
 			Блог започатковано 11 березня 2021 року
