Початок роботи над перекладом

--- a/translitions/Moia_Systema_Zdorovia_Mykola_Amosov.html
+++ b/translitions/Moia_Systema_Zdorovia_Mykola_Amosov.html
@@ -13,7 +13,7 @@
 
 <a href='http://localhost/static_php/site/index.html' title='Блог головна сторінка'>Головна</a> <a href='http://localhost/static_php/site/posts.html' title='Пости на різні теми'>Пости</a> <a href='http://localhost/static_php/site/translations.html' title='Мої переклади статей'>Переклади</a> <a href='http://localhost/static_php/site/videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 		</section>
 <div class="container" align="center">
-<div class="block" align="justify">
+<div class="block" align="justif">
 <p>Академік АМН Росії, дійсний член Академії наук України М. Амосов.</p>
 
 <p>Надруковано в журн. Наука і життя, № 5, 1998 г.</p>
