--- a/translations.html
+++ b/translations.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link href="http://localhost/static_php/site/css/s.css" rel="stylesheet">
+		<link href="https://holotiuk.github.io/css/s.css" rel="stylesheet">
 		<title>Переклади статей на Українську мову</title>
 	</head>
 	<body>
 		<section align="center" class="top">Особисті записи | Андрій Голотюк</section>
 		<section align="center" class="top_menu">
 
-<a href='http://localhost/static_php/site/index.html' title='Блог головна сторінка'>Головна</a> <a href='http://localhost/static_php/site/posts.html' title='Пости на різні теми'>Пости</a> <a href='http://localhost/static_php/site/translations.html' title='Мої переклади статей'>Переклади</a> <a href='http://localhost/static_php/site/videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 		</section>
+<a href='https://holotiuk.github.io/index.html' title='Блог головна сторінка'>Головна</a> <a href='https://holotiuk.github.io/posts.html' title='Пости на різні теми'>Пости</a> <a href='https://holotiuk.github.io/translations.html' title='Мої переклади статей'>Переклади</a> <a href='https://holotiuk.github.io/videos.html' title='Збереженні та мої відео на Youtube.com'>Відео</a> 		</section>
 <ul>
 <li>
 <a href="translitions/Moia_Systema_Zdorovia_Mykola_Amosov.html">
